made two block centered

--- a/app/globals.css
+++ b/app/globals.css
@@ -24,11 +24,12 @@ a {
     color:#222a;
     text-decoration:#2224 wavy underline;
     transition:all 0.3s;
-    &:hover {
+    
+}
+a:hover {
         color:#2223;
         text-shadow:0 0 100px #333;
     }
-}
 
 canvas {
     position:fixed;
